# aw-watcher-lastfm

./: Cargo.toml  LICENSE  README.md  config.yaml
.github/: FUNDING.yml
.github/workflows/: release.yml  releases.yml
src/: main.rs
